--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pizza</title>
-    <link type="img/png" href="../photo/logo and png.png">
-    <link rel="stylesheet" href="../css/main.css">
+    <link type="img/png" href="./photo/logo and png.png">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
@@ -15,7 +15,7 @@
         <div id = "container">
             <div class="fream">
                 <div class="logo">
-                <img src = "../photo/logo and png.png">
+                <img src = "./photo/logo and png.png">
                 <p>PIZZA</p>
                 </div>
             
@@ -53,7 +53,7 @@
                     
                 </div>
                    <div class="home">
-                    <img src="../photo/logo and png.png">
+                    <img src="./photo/logo and png.png">
                    </div> 
                 </div>         
            </div>
@@ -64,53 +64,53 @@
     <section id="menu">
         <div class="list1">
             <div class="sell">
-                <img src="../photo/menu/400-CLASSIC--PEPPERONI (1).png">
+                <img src="./photo/menu/400-CLASSIC--PEPPERONI (1).png">
                 <p>PEPPERONI<br>110$<del>150$</del></p>
             </div>
             <div class="sell">
-                <img src="../photo/menu/400-Original-CHICKEN-RANCH (1).png">
+                <img src="./photo/menu/400-Original-CHICKEN-RANCH (1).png">
                 <p>CHICKEN-RANCH<br>100$<del>130$</del></p>
                 </div>
             <div class="sell">
-                <img src="../photo/menu/400-SPICY-CHICKEN-RANCH- (1).png">
+                <img src="./photo/menu/400-SPICY-CHICKEN-RANCH- (1).png">
                 <p>SPICY-CHICKEN<br>80$<del>110$</del></p>
                 </div>
             <div class="sell">
-            <img src="../photo/menu/Cheese-Lovers-p1.png">
+            <img src="./photo/menu/Cheese-Lovers-p1.png">
             <p>CHEESE-LOVERS<br>77$<del>80$</del></p>
                 </div>
             <div class="sell"> 
-                    <img src="../photo/menu/Margherita-p1.png">
+                    <img src="./photo/menu/Margherita-p1.png">
                     <p>MARGERITA<br>50$<del>70$</del></p>
                 </div>
              <div class="sell">
-                        <img src="../photo/menu/veggie-p1.png">
+                        <img src="./photo/menu/veggie-p1.png">
                         <p>VEGGIE<br>72$<del>90$</del></p>
                  </div>
         </div>
         <div class="list2">
             <div class="sell">
-            <img src="../photo/menu/Chicken-Supreme-p1.png">
+            <img src="./photo/menu/Chicken-Supreme-p1.png">
             <p>CHICKEN-SUPREME<br>80$<del>115$</del></p>
                 </div>
             <div class="sell">
-                <img src="../photo/menu/CLASSIC--BBQ-CHICKEN.png">
+                <img src="./photo/menu/CLASSIC--BBQ-CHICKEN.png">
                 <p>BBQ-CHICKEN<br>93$<del>120$</del></p>
                 </div>
             <div class="sell">
-                <img src="../photo/menu/Classic-Pepperoni-p1.png">
+                <img src="./photo/menu/Classic-Pepperoni-p1.png">
                 <p>PEPPERONI<br>85$<del>110$</del></p>
                 </div>
             <div class="sell">
-                <img src="../photo/menu/CLASSIC-VEGETARIAN.png">
+                <img src="./photo/menu/CLASSIC-VEGETARIAN.png">
                 <p>VEGETARIAN<br>62$<del>100$</del></p>
                 </div>
             <div class="sell">
-                <img src="../photo/menu/MEAT-LOVERS.png">
+                <img src="./photo/menu/MEAT-LOVERS.png">
                 <p>MEAT-LOVERS<br>80$<del>110$</del></p>
             </div>
             <div class="sell">
-                <img src="../photo/menu/Super-Supreme-p1.png">
+                <img src="./photo/menu/Super-Supreme-p1.png">
                 <p>SUPER-SUPREME<br>45$<del>60$</del></p>
                 </div>
         </div>
